--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <Spinner
+
             android:id="@+id/spinnerActionFragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -18,18 +20,38 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="641dp"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:text="Välkommen! Nedan finner du ett antal funktioner som kanske kan vara dig till hjälp."
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerActionFragment" />
+            app:layout_constraintTop_toBottomOf="@+id/spinnerActionFragment"
+
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="641dp"
+
+            android:background="@drawable/rounded_corners"
+            android:elevation="10dp"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:paddingVertical="8dp"
+
+                android:paddingHorizontal="16dp"
+                android:text="Välkommen! Nedan finner du ett antal funktioner som kanske kan vara dig till hjälp."
+                />
+
+        </LinearLayout>
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
