--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -12,8 +12,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
-
             <Spinner
 
                 android:id="@+id/spinnerActionFragment"
@@ -93,7 +91,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/countInsulinFragilityButton" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/informativeLinksButton"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="46dp"
