--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     </style>
 
     <style name="AppTheme.Dark" parent="Theme.AppCompat">
-        <item name="android:windowBackground">@color/black</item>
+        <item name="android:windowBackground">@drawable/black</item>
     </style>
 </resources>
